--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>YelpCamp</title>
+        <link rel="shortcut icon" type="image" href="/images/favicon.png">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
     </head>
