--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -5,7 +5,7 @@
         <div style="width: 30%; margin: 20px auto">
             <form action="/campgrounds/<%= campground_id %>/comments/<%= comment._id %>?_method=PUT" method="POST">
                 <div class="mb-2">
-                    <input class="form-control" type="text" name="comment[text]" value="<%= comment.text %>">
+                    <input class="form-control" type="text" name="comment[text]" value="<%= comment.text %>" required>
                 </div>
                 <div class="mb-2">
                     <button class="btn btn-lg btn-primary col-12">Submit</button>
