--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -6,7 +6,7 @@
         <div style="width: 30%; margin: 20px auto">
             <form action="/campgrounds/<%= campground.id %>/comments" method="POST">
                 <div class="mb-2">
-                    <input class="form-control" type="text" name="comment[text]" placeholder="comment">
+                    <input class="form-control" type="text" name="comment[text]" placeholder="comment" required>
                 </div>
                 <div class="mb-2">
                     <button class="btn btn-lg btn-primary col-12">Submit</button>
