--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -15,7 +15,7 @@
                 </div>
                 <p id="errorElement"></p>
                 <div class="mb-2">
-                    <textarea class="form-control" name="desc" placeholder="Description" rows="3"></textarea>
+                    <textarea class="form-control" name="desc" rows="3"></textarea>
                 </div>
                 <div class="mb-2">
                     <button class="btn btn-lg btn-primary col-12" id="submitButton">Submit</button>
